# USProbeTracker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Datalogger.cpp  Datalogger.h  IRSegmentation.cpp  IRSegmentation.h  IRSegmentation_Old.h  ObstetricUS_Project.sln  ObstetricUS_Project.vcxproj  ObstetricUS_Project.vcxproj.filters  PoseTracker.cpp  PoseTracker.h  READMD.md  README.md  RealSense.cpp  RealSense.h  SettingsAndNotes.txt  SetupAndSegment.cpp  SetupAndSegment.h  ShellSensorReader - Copy.h  ShellSensorReader.cpp  ShellSensorReader.h  USVideoStreaming.cpp  USVideoStreaming.h  Utils.cpp  Utils.h  main.cpp  vcpkg.json
FTFirmware/: CMakeLists.txt  README.md  sdkconfig  uartServer.py  udpServer.py
FTFirmware/main/: app_main.c  magft_imu.h  magft_pindef.h  magft_settings.h  magft_spi.h  magft_sync.h  magft_uart.h  magft_wifi.h  wifiudp.h
Resources/: calmat.csv
StereoCalibration/: CMakeLists.txt  RealSense.cpp  RealSense.h  StereoCalibClass.cpp  StereoCalibClass.h  StereoCalibration.vcxproj  StereoCalibration.vcxproj.filters  main.cpp
StereoCalibration/CalibFiles/Calib/: calibration_params.yaml  calibration_params_2.yaml
archive/: IRSegmentation_Old.cpp  ObstetricUS_Project.vcxproj  StereoCalibration.sln
configs/: core.toml
include/: AsyncVideoWriter.hpp  Datalogger.h  IRSegmentation.h  PoseTracker.h  RealSense.h  SetupAndSegment.h  ShellSensorReader.h  USVideoStreaming.h  Utils.h  atomicops.h  configs.hpp  framework.h  log.h  loggers.hpp  readerwriterqueue.h
pythonscripts/: depthVideoViewer_16Bit.py  depthVideoViewer_BGREncoded.py  videotest.py
src/: Datalogger.cpp  EquipmentTest.cpp  IRSegmentation.cpp  PoseTracker.cpp  RealSense.cpp  SetupAndSegment.cpp  ShellSensorReader.cpp  USVideoStreaming.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  USProbeTrackerTest.cpp
